--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,15 +2,78 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Divyansh Mahajan</title>
+  {{> head}}
 </head>
 
 <body>
   <div>
     {{> header}}
-    <h1>About</h1>
+    <section class="container main border-bottom" id="about-me">
+      <div class="row">
+        <div class="col-xl-12">
+          <div class="row">
+            <div class="col-xl-5">
+              <div id="about-me-description">
+                <h1 class="page-header">about me</h1>
+                <p class="page-sub-header">I'm a full-stack software developer based in Delhi, India.</p>
+                <p class="intro">I enjoy turning complex problems into simple, beautiful and intuitive designs. When I'm
+                  not coding, tweeting or pushing pixels, you'll find me cooking, gardening or working out in the park.</p>
+                <div class="action-buttons">
+                  <div class="follow-button twitter">
+                    <span class="button-icon">
+                      <i class="fab fa-twitter"></i>
+                    </span>
+                    <span class="button-text">
+                      Follow @divymhjn
+                    </span>
+                  </div>
+                  <div class="follow-button linkedin">
+                    <span class="button-icon">
+                      <i class="fab fa-linkedin"></i>
+                    </span>
+                    <span class="button-text">
+                      Connect @divyanshmahajan
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="random-facts" class="container main no-padding-bottom">
+      <div class="row no-gutters">
+        <div class="col-xl-7">
+
+        </div>
+        <div class="col-xs-5">
+          <h2 class="sub-header">random facts</h2>
+          <ul id="facts" class="nav flex-column">
+            <li class="nav-item">
+              I love to do this.
+            </li>
+            <li class="nav-item">
+              I love to do this.
+            </li>
+            <li class="nav-item">
+              I love to do this.
+            </li>
+            <li class="nav-item">
+              I love to do this.
+            </li>
+            <li class="nav-item">
+              I love to do this.
+            </li>
+            <li class="nav-item">
+              I love to do this.
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </div>
+  {{> footer}} {{> foot}}
 </body>
 
 </html>
