--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
+	{{> head}}
 	<title>Divyansh Mahajan</title>
 </head>
 
@@ -11,6 +11,7 @@
 		{{> header}}
 		<h1>Hello World!</h1>
 	</div>
+	{{> foot}}
 </body>
 
 </html>
