--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,41 @@
-<header>
-  <a href="/">Home</a>
-  <a href="/about">About</a>
-  <a href="/blog">Blog</a>
-  <a href="/portfolio">Portfolio</a>
-</header>
+<div class="top-bar">
+  <div id="logo" href="/"></div>
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="/about">about</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/portfolio">portfolio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/blog">blog</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/contact">contact</a>
+    </li>
+    <li class="nav-item">
+      <ul class="nav social-icons">
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+</div>
