feat(home): add editor

--- a/scss/main/theme.scss
+++ b/scss/main/theme.scss
@@ -9,6 +9,9 @@ $white: #ffffff;
 $gray: #666666;
 $light-gray: #f5f5f5;
 
+// Radius
+$global-radius: 3px;
+
 // Borders
 $border-color: #dddddd;
 $code-border: 1px solid $border-color;
