--- a/views/about.hbs
+++ b/views/about.hbs
@@ -44,7 +44,7 @@
     </section>
     <section id="random-facts" class="container main no-padding-bottom">
       <div class="row no-gutters">
-        <div class="col-xl-7">
+        <div class="col-xl-7" style="height: 300px">
 
         </div>
         <div class="col-xs-5">
