--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,16 +9,19 @@
   border-bottom: 1px solid #dddddd; }
 
 .no-margin {
-  margin: 0; }
+  margin: 0 !important; }
 
 .margin-bottom-0 {
-  margin-bottom: 0; }
+  margin-bottom: 0 !important; }
 
 .no-padding {
-  padding: 0; }
+  padding: 0 !important; }
 
 .padding-bottom-0 {
-  padding-bottom: 0; }
+  padding-bottom: 0 !important; }
+
+.padding-right-0 {
+  padding-right: 0 !important; }
 
 body {
   font-family: "proxima nova light", "Helvetica Neue", Helvetica, Arial, Sans-serif; }
@@ -63,8 +66,56 @@ body {
 .intro {
   line-height: 1.8;
   font-weight: 300;
+  color: #666666;
   font-size: 18px;
   letter-spacing: 0.6px; }
+
+#home .name-section #name {
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25); }
+
+#home .name-section ul.nav > li {
+  height: 4px;
+  width: 120px;
+  background-color: #e1e4e7;
+  border-radius: 3px; }
+  #home .name-section ul.nav > li:first-child {
+    margin-bottom: 8px; }
+  #home .name-section ul.nav > li:nth-child(2) {
+    margin-left: 40px; }
+
+#home #editor .editor-head {
+  background-color: #1a1a1a;
+  height: 30px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  padding: 9px 10px;
+  border-bottom: 2px solid #000; }
+  #home #editor .editor-head ul > li {
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    margin-right: 8px; }
+    #home #editor .editor-head ul > li.red {
+      background-color: #fc635d; }
+    #home #editor .editor-head ul > li.yellow {
+      background-color: #fdbc40; }
+    #home #editor .editor-head ul > li.green {
+      background-color: #34c84a; }
+
+#home #editor .editor-content {
+  background-color: #212121;
+  height: 300px;
+  position: relative;
+  color: #ffffff;
+  padding: 8px 12px; }
+  #home #editor .editor-content #intro-class,
+  #home #editor .editor-content #export {
+    margin-top: 20px; }
+  #home #editor .editor-content #intro-render,
+  #home #editor .editor-content #intro-render-end {
+    margin-left: 16px; }
+  #home #editor .editor-content #intro-return {
+    margin-left: 32px; }
 
 #about-me-description {
   margin-top: 40px; }
