--- a/scss/main/helpers.scss
+++ b/scss/main/helpers.scss
@@ -17,18 +17,22 @@
 
 // Margins
 .no-margin {
-  margin: 0;
+  margin: 0 !important;
 }
 
 .margin-bottom-0 {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 // Paddings
 .no-padding {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .padding-bottom-0 {
-  padding-bottom: 0;
+  padding-bottom: 0 !important;
+}
+
+.padding-right-0 {
+  padding-right: 0 !important;
 }
