--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <div class="top-bar">
-  <div id="logo" href="/"></div>
+  <div id="logo" href="/">
+  </div>
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link active" href="/about">about</a>
