--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,9 @@
 <div class="top-bar">
-  <div id="logo" href="/">
-  </div>
+  <a id="logo" href="/">
+    <span>
+      D.
+    </span>
+  </a>
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link active" href="/about">about</a>
