--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,7 +23,7 @@
 
 					</div>
 					<div class="col-xl-5">
-						<h1 class="page-header" id="coder">coder</h1>
+						<h1 class="page-header" id="coder"><span><</span>coder <span>/></span></h1>
 						<p class="intro">
 							A full-stack programmer, who focuses on writing clean, elegant and efficient code.
 						</p>
