--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,9 @@ body {
 }
 
 #home {
+  #intro {
+    height: 600px;
+  }
   .name-section {
     #name {
       text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
@@ -103,6 +106,8 @@ body {
   }
 
   #editor {
+    margin-bottom: 40px;
+
     .editor-head {
       background-color: #1a1a1a;
       height: 30px;
