feat(about-me): add animation in the introduction page

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -47,6 +47,6 @@
     </section>
   </div>
   <div class="arrow-section">
-    <div class="arrow"></div>
+    <div class="arrow" id="arrow"></div>
   </div>
 </footer>
