--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ body {
   background-color: #111111;
   padding: 16px 13%;
   display: flex;
+  height: 92px;
   justify-content: space-between; }
   .top-bar #logo {
     height: 60px;
@@ -84,20 +85,48 @@ body {
   letter-spacing: 0.6px; }
 
 #home #intro {
-  height: 600px; }
+  height: calc(100vh - 92px); }
 
-#home .name-section #name {
-  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25); }
+#home .name-section {
+  width: 100%;
+  overflow: hidden; }
+  #home .name-section h1 {
+    animation: slide-right 1s; }
+  #home .name-section ul {
+    animation: slide-right 1.5s; }
 
-#home .name-section ul.nav > li {
-  height: 4px;
-  width: 120px;
-  background-color: #e1e4e7;
-  border-radius: 3px; }
-  #home .name-section ul.nav > li:first-child {
-    margin-bottom: 8px; }
-  #home .name-section ul.nav > li:nth-child(2) {
-    margin-left: 40px; }
+@keyframes slide-right {
+  from {
+    margin-left: -100%;
+    width: 300%; }
+  to {
+    margin-left: 0%;
+    width: 100%; } }
+  #home .name-section #name {
+    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25); }
+  #home .name-section ul.nav > li {
+    height: 4px;
+    width: 120px;
+    background-color: #e1e4e7;
+    border-radius: 3px; }
+    #home .name-section ul.nav > li:first-child {
+      margin-bottom: 8px; }
+    #home .name-section ul.nav > li:nth-child(2) {
+      margin-left: 40px; }
+
+#home #intro-coder {
+  animation: slide-left 0.3s; }
+
+#home #coder {
+  animation: slide-left 1.25s; }
+
+@keyframes slide-left {
+  from {
+    margin-left: 100%;
+    width: 300%; }
+  to {
+    margin-left: 0%;
+    width: 100%; } }
 
 #home #editor {
   margin-bottom: 40px; }
@@ -121,7 +150,7 @@ body {
         background-color: #34c84a; }
   #home #editor .editor-content {
     background-color: #212121;
-    height: 300px;
+    height: 400px;
     position: relative;
     color: #ffffff;
     padding: 8px 12px;
