--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@ body {
   background-color: $black;
   padding: 16px 13%;
   display: flex;
+  height: 92px;
   justify-content: space-between;
 
   #logo {
@@ -83,12 +84,36 @@ body {
 
 #home {
   #intro {
-    height: 600px;
+    height: calc(100vh - 92px);
   }
   .name-section {
+    width: 100%;
+    overflow: hidden;
+
+    h1 {
+      animation: slide-right 1s;
+    }
+
+    ul {
+      animation: slide-right 1.5s;
+    }
+
+    @keyframes slide-right {
+      from {
+        margin-left: -100%;
+        width: 300%;
+      }
+
+      to {
+        margin-left: 0%;
+        width: 100%;
+      }
+    }
+
     #name {
       text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
     }
+
     ul.nav > li {
       height: 4px;
       width: 120px;
@@ -102,6 +127,26 @@ body {
       &:nth-child(2) {
         margin-left: 40px;
       }
+    }
+  }
+
+  #intro-coder {
+    animation: slide-left 0.3s;
+  }
+
+  #coder {
+    animation: slide-left 1.25s;
+  }
+
+  @keyframes slide-left {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+
+    to {
+      margin-left: 0%;
+      width: 100%;
     }
   }
 
@@ -135,7 +180,7 @@ body {
     }
     .editor-content {
       background-color: #212121;
-      height: 300px;
+      height: 400px;
       position: relative;
       color: $white;
       padding: 8px 12px;
