--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,7 +27,7 @@
 								</div>
 								<div class="col-xl-5">
 									<h1 class="page-header" id="coder"><span><</span>coder <span>/></span></h1>
-									<p class="intro">
+									<p class="intro" id="intro-coder">
 										A full-stack programmer, who focuses on writing clean, elegant and efficient code. A full-stack programmer, who focuses on
 										writing clean, elegant and efficient code. A full-stack programmer, who focuses on writing clean, elegant and efficient
 										code.
@@ -70,6 +70,8 @@
 	{{> footer}} {{> foot}}
 
 	<script type="text/javascript">
+		let typing = false;
+
 		// Checks if the element is in viewport
 		const isInViewport = function (elem) {
 			const bounding = elem.getBoundingClientRect();
@@ -119,13 +121,15 @@
 		$(window).scroll(() => {
 			const element = document.querySelector('#editor');
 
+			if (typing && isInViewport(element)) {
+				return;
+			}
+
 			if (isInViewport(element)) {
-				console.log('hello')
-				//handleTypeEffect();
+				typing = true;
+				handleTypeEffect();
 			}
 		});
-
-
 	</script>
 </body>
 
