--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,8 @@
 	<div>
 		{{> header}}
 		<div id="home">
-			<div class="border-bottom">
+			<div id="main" class="border-bottom">
+				<img src="/images/developer.png" alt="Developer">
 				<section class="main container" id="intro">
 					<div class="row no-gutters" style="height: 100%">
 						<div class="col-xl-12 name-section">
@@ -21,27 +22,61 @@
 							</ul>
 						</div>
 						<div class="col-xl-12">
-							<div class="row">
-								<div class="col-xl-7">
-
-								</div>
+							<div class="row justify-content-start">
 								<div class="col-xl-5">
-									<h1 class="page-header" id="coder"><span><</span>coder <span>/></span></h1>
-									<p class="intro" id="intro-coder">
-										A full-stack programmer, who focuses on writing clean, elegant and efficient code. A full-stack programmer, who focuses on
-										writing clean, elegant and efficient code. A full-stack programmer, who focuses on writing clean, elegant and efficient
-										code.
-									</p>
+									<div id="about-me-description">
+										<p class="page-sub-header">I'm a full-stack software developer based in Delhi, India.</p>
+										<p class="intro"> I enjoy turning complex problems into simple, beautiful and intuitive designs. I focus on writing
+											clean, elegant and efficient code. When I'm not coding, tweeting or pushing pixels, you'll find me reading or
+											travelling.
+										</p>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 			</div>
-			<div class="section-box-shadow">
+			<div id="random-facts" class="section-box-shadow">
+				<section class="container facts-section">
+					<div class="row">
+						<div class="col-xl-7">
+							<div class="facts-images">
+								<img class="laptop" src="/images/macbook.png" alt="macbook">
+								<img class="facts" src="/images/facts.png" alt="macbook">
+							</div>
+						</div>
+						<div class="col-xl-5">
+							<h2 class="sub-header">random facts</h2>
+							<ul id="facts" class="nav flex-column">
+								<li class="nav-item">
+									I love to do this.
+								</li>
+								<li class="nav-item">
+									I love to do this.
+								</li>
+								<li class="nav-item">
+									I love to do this.
+								</li>
+								<li class="nav-item">
+									I love to do this.
+								</li>
+								<li class="nav-item">
+									I love to do this.
+								</li>
+								<li class="nav-item">
+									I love to do this.
+								</li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</div>
+			<div class="section-box-shadow" id="editor-section">
 				<section class="main container">
 					<div class="row">
 						<div class="col-xl-12">
+							<p class="page-sub-header">Some cool stuff, because why not?</p>
 							<div id="editor">
 								<div class="editor-head">
 									<ul class="nav">
