--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -26,22 +26,22 @@
           </ul>
         </div>
         <div class="col-xl-4 flex vertical-centered follow-buttons">
-          <div class="follow-button twitter">
+          <a class="follow-button twitter" href="https://twitter.com/divymhjn" target="_new">
             <span class="button-icon">
               <i class="fab fa-twitter"></i>
             </span>
             <span class="button-text">
               Follow @divymhjn
             </span>
-          </div>
-          <div class="follow-button linkedin">
+          </a>
+          <a class="follow-button linkedin" href="https://www.linkedin.com/in/divyansh-mahajan-200a8549/" target="_new">
             <span class="button-icon">
               <i class="fab fa-linkedin"></i>
             </span>
             <span class="button-text">
               Connect @divyanshmahajan
             </span>
-          </div>
+          </a>
         </div>
       </div>
     </section>
