--- a/scss/main/theme.scss
+++ b/scss/main/theme.scss
@@ -15,3 +15,6 @@ $global-radius: 3px;
 // Borders
 $border-color: #dddddd;
 $code-border: 1px solid $border-color;
+
+// Background
+$background-light-gray: #fafafa;
