--- a/views/home.hbs
+++ b/views/home.hbs
@@ -47,25 +47,25 @@
 							</div>
 						</div>
 						<div class="col-xl-5">
-							<h2 class="sub-header">random facts</h2>
+							<p class="page-sub-header">Random facts</p>
 							<ul id="facts" class="nav flex-column">
 								<li class="nav-item">
-									I love to do this.
+									I love to code.
 								</li>
 								<li class="nav-item">
-									I love to do this.
+									I like talking about performance for web and mobile.
 								</li>
 								<li class="nav-item">
-									I love to do this.
+									I like to read about technology.
 								</li>
 								<li class="nav-item">
-									I love to do this.
+									I sometimes cook.
 								</li>
 								<li class="nav-item">
-									I love to do this.
+									My new found love is Twitter.
 								</li>
 								<li class="nav-item">
-									I love to do this.
+									I have started with some blogging.
 								</li>
 							</ul>
 						</div>
