--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -10,7 +10,7 @@
           </ul>
         </div>
         <div class="col-xl-4">
-          <ul id="footer-nav" class="nav">
+          {{!-- <ul id="footer-nav" class="nav">
             <li class="nav-item">
               <a class="nav-link" href="/about">about</a>
             </li>
@@ -23,7 +23,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/contact">contact</a>
             </li>
-          </ul>
+          </ul> --}}
         </div>
         <div class="col-xl-4 flex vertical-centered follow-buttons">
           <a class="follow-button twitter" href="https://twitter.com/divymhjn" target="_new">
