--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,7 @@
     </span>
   </a>
   <ul class="nav">
-    <li class="nav-item">
+    {{!-- <li class="nav-item">
       <a class="nav-link active" href="/about">about</a>
     </li>
     <li class="nav-item">
@@ -16,27 +16,27 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/contact">contact</a>
-    </li>
+    </li> --}}
     <li class="nav-item">
       <ul class="nav social-icons">
         <li class="nav-item">
-          <a class="nav-link" href="/">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">
-            <i class="fab fa-github"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">
+          <a class="nav-link" href="https://twitter.com/divymhjn" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">
+          <a class="nav-link" href="https://github.com/divyanshmahajan24" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/divyansh-mahajan-200a8549/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.facebook.com/divy.mhjn" target="_blank">
+            <i class="fab fa-facebook-f"></i>
           </a>
         </li>
       </ul>
